# sports-betting-automation-framework

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: execution-results-and-bugs.md  strategy-and-recommendations.md  test-plan.md
src/sports_betting/: __init__.py  config.py
src/sports_betting/api/: __init__.py
src/sports_betting/api/clients/: __init__.py  base_api_client.py  betting_api_client.py
src/sports_betting/api/services/: __init__.py  betting_api_service.py
src/sports_betting/ui/: __init__.py  driver_factory.py
src/sports_betting/ui/pages/: __init__.py  base_page.py  bet_slip_page.py  matches_page.py
src/sports_betting/ui/services/: __init__.py  betting_ui_service.py
tests/: conftest.py
tests/e2e_tests/single_bet_placement/: __init__.py  test_single_bet_placement.py
tests/system_tests/: __init__.py
tests/system_tests/single_bet_placement/: test_place_bet_validation.py
